--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@
   column-gap: 10px;
   width: 400px;
   height: 500px;
-  background-color: aqua;
   padding: 10px;
   border-style: solid;
   border-radius: 10px;
@@ -76,6 +75,7 @@
 
 @media (max-width: 400px) {
   .main-content {
-    background-image: url("./imagens/pexels-olga-lioncat-7245369.jpg");
+    background-image: url("./imagens/pexels-vlado-paunovic-3038740.jpg");
+    /* background-color: white; */
   }
 }
